--- a/serverproduct/src/main/res/values/strings.xml
+++ b/serverproduct/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">serverproduct</string>
+    <drawable name="layoutonclick">@color/app_base_layout_background</drawable>
+    <drawable name="layoutunonclick">@color/white</drawable>
 </resources>
